webcomponents loading fix

--- a/client/main.html
+++ b/client/main.html
@@ -5,6 +5,7 @@
     <link rel="manifest" href="/web.manifest.json">
     <link rel="shortcut icon" href="/mwc.ico">
     <script src="/webcomponentsjs/custom-elements-es5-adapter.js"></script>
+    <script src="/webcomponentsjs/webcomponents-loader.js"></script>
     <style>
 body{
   padding:0px;
