--- a/client/main.html
+++ b/client/main.html
@@ -6,6 +6,7 @@
     <link rel="shortcut icon" href="/mwc.ico">
     <script src="/webcomponentsjs/custom-elements-es5-adapter.js"></script>
     <script src="/webcomponentsjs/webcomponents-loader.js"></script>
+    <!-- <script src="../node_modules/redux/dist/redux.js"></script> -->
     <style>
 body{
   padding:0px;
