--- a/imports/ui/imports.html
+++ b/imports/ui/imports.html
@@ -16,5 +16,5 @@
 <link rel="import" href="bower_components/paper-button/paper-button.html">
 <link rel="import" href="bower_components/paper-card/paper-card.html">
 <link rel="import" href="bower_components/paper-styles/paper-styles.html">
-
-
+<link rel="import" href="bower_components/paper-input/paper-input.html">
+<link rel="import" href="bower_components/paper-toggle-button/paper-toggle-button.html">
