--- a/imports/ui/index.html
+++ b/imports/ui/index.html
@@ -1,3 +1,3 @@
+<link rel="import" href="redux/redux-mixin.html">
 <link rel="import" href="imports.html">
-<link rel="import" href="layouts/test-layout.html">
-
+<link rel="import" href="components/test-layout.html">
