--- a/imports/ui/imports.html
+++ b/imports/ui/imports.html
@@ -18,3 +18,4 @@
 <link rel="import" href="bower_components/paper-styles/paper-styles.html">
 <link rel="import" href="bower_components/paper-input/paper-input.html">
 <link rel="import" href="bower_components/paper-toggle-button/paper-toggle-button.html">
+<link rel="import" href="bower_components/io-value/io-value.html">
