--- a/imports/ui/index.html
+++ b/imports/ui/index.html
@@ -1,3 +1,4 @@
+<link rel="import" href="bower_components/polymer/polymer.html">
 <link rel="import" href="redux/redux-mixin.html">
 <link rel="import" href="imports.html">
 <link rel="import" href="components/test-layout.html">
