formatting remove stupid stuff

--- a/client/main.html
+++ b/client/main.html
@@ -6,15 +6,9 @@
     <link rel="shortcut icon" href="/mwc.ico">
     <script src="/webcomponentsjs/custom-elements-es5-adapter.js"></script>
     <script src="/webcomponentsjs/webcomponents-loader.js"></script>
-    <!-- <script src="../node_modules/redux/dist/redux.js"></script> -->
-    <style>
-body{
-  padding:0px;
-  margin:0px;
-}
-    </style>
+    <style>body{padding:0px;margin:0px;}</style>
   </head>
-  <body class="fullbleed">
+  <body>
     <test-layout></test-layout>
   </body>
 </html>
