--- a/imports/ui/redux/import-all.html
+++ b/imports/ui/redux/import-all.html
@@ -1,4 +1,4 @@
 <link rel="import" href="../bower_components/polymer-redux/polymer-redux.html">
-<link rel="import" href="./redux-mixin.html">
+<link rel="import" href="./reducers.html">
 <link rel="import" href="./polymer-mixin.html">
 <link rel="import" href="./mongo-repeat.html">
