--- a/imports/ui/redux/import-all.html
+++ b/imports/ui/redux/import-all.html
@@ -1,3 +1,4 @@
+<link rel="import" href="../bower_components/polymer/polymer.html">
 <link rel="import" href="../bower_components/polymer-redux/polymer-redux.html">
 <link rel="import" href="./reducers.html">
 <link rel="import" href="./polymer-mixin.html">
