problems with persistency on collecitons

--- a/imports/ui/redux/mongo-repeat.html
+++ b/imports/ui/redux/mongo-repeat.html
@@ -17,7 +17,10 @@ class MongoRepeat extends AdornisPolymerRedux(Polymer.DomRepeat) {
             },
             subParams: Array,
             debounceInterval: Number,
-            collection: { type: String, value: null, observer: '_setCollection' },
+            collection: {
+                type: String, value: null, observer: '_setCollection',
+            },
+            persistentCollection: { type: Boolean, value: false },
 
             // because of the database-nature of things, immediately change the defaults for initial count and target framerate
             // this SHOULD be overwritten, but it's better this way than not set at all
@@ -57,7 +60,8 @@ class MongoRepeat extends AdornisPolymerRedux(Polymer.DomRepeat) {
                 this.set('items', e.detail[collection]);
             }
         });
-        this._subscribeCollection('items', collection, collection, 'subParams');
+        console.log(this.persistentCollection);
+        this._subscribeCollection('items', collection, collection, 'subParams', this.persistentCollection);
     }
 
     insert(obj) {
