problems with persistency on collecitons

--- a/imports/ui/redux/reducers.html
+++ b/imports/ui/redux/reducers.html
@@ -47,6 +47,11 @@ const reducer = (state = {}, action) => {
                 object = Object.assign({}, state);
     }
 
+    // persistent handling
+    if (action.type === 'LOAD_PERSISTENT') {
+        object[action.statePath] = action.value;
+    }
+
     // insert polymer tracked variables
     if (action.type === 'UPDATE_POLYMER_VARIABLE') {
         object[action.statePath] = action.value;
@@ -74,7 +79,8 @@ const mongoMiddleware = middlewareStore => next => (action) => {
                     statePath: action.statePath,
                     array: [],
                 });
-                const obsHandle = DatabaseHolder.getDatabase(action.collection).find({}).observe({
+                console.log(action);
+                const obsHandle = DatabaseHolder.getDatabase(action.collection, action.isPersistent).find({}).observe({
                     added: (doc) => {
                         middlewareStore.dispatch({
                             type: 'ADDED_DOC',
