ssr first steps

--- a/client/main.html
+++ b/client/main.html
@@ -5,8 +5,8 @@
     <!--cannot use the name manifest.json. reserved by meteor-->
     <link rel="manifest" href="/web.manifest.json">
     <link rel="shortcut icon" href="/icon.ico">
-    <script async src="/webcomponentsjs/custom-elements-es5-adapter.js"></script>
-    <script async src="/webcomponentsjs/webcomponents-loader.js"></script>
+    <script async src="../node_modules/@webcomponents/webcomponentsjs/custom-elements-es5-adapter.js"></script>
+    <script async src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
     <style>body{padding:0px;margin:0px;}</style>
   </head>
   <body>
