--- a/imports/ui/index.html
+++ b/imports/ui/index.html
@@ -1,2 +1,3 @@
+<link rel="import" href="../bower_components/polymer/polymer.html">
 <link rel="import" href="redux/import-all.html">
 <link rel="import" href="components/test-layout.html">
