--- a/imports/ui/redux/polymer-mixin.html
+++ b/imports/ui/redux/polymer-mixin.html
@@ -129,23 +129,23 @@ AdornisPolymerRedux = Parent => class AdornisPolymerRedux extends ReduxMixin(Par
 
     // convenience methods
 
-    _div(a, b) { // eslint-disable-line class-methods-use-this
+    div(a, b) { // eslint-disable-line class-methods-use-this
         return +a / +b;
     }
 
-    _mul(...args) { // eslint-disable-line class-methods-use-this
+    mul(...args) { // eslint-disable-line class-methods-use-this
         return args.reduce((prod, curr) => prod * +curr, 1);
     }
 
-    _sum(...args) { // eslint-disable-line class-methods-use-this
+    sum(...args) { // eslint-disable-line class-methods-use-this
         return args.reduce((sum, curr) => sum + +curr, 0);
     }
 
-    _sub(...args) { // eslint-disable-line class-methods-use-this
+    sub(...args) { // eslint-disable-line class-methods-use-this
         return args.slice(1).reduce((diff, curr) => diff - +curr, args[0]);
     }
 
-    _(val, digits = 2, unit) { // eslint-disable-line class-methods-use-this
+    f(val, digits = 2, unit) { // eslint-disable-line class-methods-use-this
         if (!unit) unit = '';
         if (!digits) digits = 0;
 
@@ -154,13 +154,13 @@ AdornisPolymerRedux = Parent => class AdornisPolymerRedux extends ReduxMixin(Par
         return `${numArr[0].replace(/\B(?=(\d{3})+(?!\d))/g, '.')},${numArr[1]} ${unit}`;
     }
 
-    _date(date) { // eslint-disable-line class-methods-use-this
+    date(date) { // eslint-disable-line class-methods-use-this
         const monthNames = ['Januar', 'Februar', 'März', 'April', 'Mai', 'Juni', 'Juli', 'August', 'September', 'Oktober', 'November', 'Dezember'];
         const d = new Date(date);
         return `${d.getDay()}. ${monthNames[d.getMonth()]} ${d.getFullYear()}`;
     }
 
-    _print(...x) { // eslint-disable-line class-methods-use-this
+    print(...x) { // eslint-disable-line class-methods-use-this
         console.log(x);
     }
 };
